<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context="com.ipsis.scan.reporting.activities.SummaryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/BrfTheme.AppBarOverlay">

        <include layout="@layout/header_date" />
    </android.support.design.widget.AppBarLayout>

    <fragment android:id="@+id/fragment"
        android:name="com.ipsis.scan.reporting.activities.SummaryFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout="@layout/fragment_summary" />

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            fab:fab_addButtonColorNormal="#1E88E5"
            fab:fab_addButtonColorPressed="#1565C0"
            fab:fab_addButtonPlusIconColor="#FFFFFF"
            fab:fab_addButtonStrokeVisible="false"
            fab:fab_labelStyle="@style/BrfTheme.MenuLabel"
            fab:fab_labelsPosition="left"
            android:layout_marginTop="16dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/mission1Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="#5e7d8a"
                fab:fab_colorPressed="#78909c"
                fab:fab_size="mini"
                fab:fab_title="@string/create_hors_reseau"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/mission2Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="#5e7d8a"
                fab:fab_colorPressed="#78909c"
                fab:fab_size="mini"
                fab:fab_title="@string/create_lieu_fixe"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/mission3Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="#5e7d8a"
                fab:fab_colorPressed="#78909c"
                fab:fab_size="mini"
                fab:fab_title="@string/create_sur_ligne"/>
        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
